not centered potential fix

--- a/style.css
+++ b/style.css
@@ -544,7 +544,7 @@ a {
     display: flex;
     flex-direction: column;
     align-items: center;
-    width: 700px;
+    width: 100%;
     height: 700px;
     align-self: center;
   }
@@ -562,7 +562,7 @@ a {
 
   .carpics {
     height: 100%;
-    width: auto\;
+    width: auto;
   }
 
   .wordleftbox {
@@ -575,6 +575,9 @@ a {
     right: 0;
     height: 50%;
     width: 100%;
+  }
+  .natureContainer{
+    max-width: 980px;
   }
 }
 
